MODDICORE-492: Add dependency on mod-inventory-storage-dto and remove inventory schemas (#427)
* MODDICORE-492: Add dependency on mod-inventory-storage-dto